# immich-autotag

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.cron  Jenkinsfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  compatibility.yml  docker-compose.yml  immich-autotag.code-workspace  immich_api_example_read_asset_tags_albums.py  immich_user_config_template.py  importlinter-strict.ini  importlinter-target.ini  importlinter.ini  main.py  profile(1).stats  profile_20260125T104035Z.stats  profile_optimized.stats  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.sh  run_test_asset_albums_tags.sh  setup_venv.sh  tuples_violations.txt  tuples_violations_after_attrs_validated.txt
.claude/: settings.json
.claude/commands/: diagnose-jenkins.md  quality-gate.md  release.md  sync-config.md
.claude/tasks/: meme-consolidation-brief.md
.github/workflows/: release.yml
doc/: immich_issue_orphan_albums.md
docker/: cron-entrypoint.sh  crontab.template  docker-compose.yml  print_version.sh
docs/: CONTRIBUTING.md  ISSUE_SYSTEM_CONVENTION.md  README.md  compatibility.md  development.md  docker.md  duplicates_management_plan.md  explain-like-im-5.md  functional_blocks_matrix.md  refactor_process_single_asset.md
docs/dev/: README.md  about_openapi.md  architecture.md  branches.md  docker.md  import-linter-levels.md  static_factory_pattern.md  style.md  versioning_workflow.md
docs/feature-album-detection-from-folders/: plan_album_detection.md
docs/issues/: CONVENTIONS.md  README.md  registry.md  subtask_template.md
docs/refactoring/: refactoring_plan.md  v1_refactoring_plan.md  v2_propuesta_estructura_dominio.md
docs/releases/: v0.80.0-announcement.md
immich_api_examples/: immich_api_example_read_asset_tags_albums.py  run_test_asset_albums_tags.sh
immich_autotag/: .gitignore  __init__.py  __main__.py  config.py  entrypoint.py  main_entrypoint.py  main_entrypoint.py.ruff.toml  types.py  version.py
immich_autotag/albums/: __init__.py  album_and_modification.py  album_collection_wrapper.py  album_folder_analyzer.py  album_list.py  album_policy_resolver.py  album_response_wrapper.py  asset_to_albums_map.py  deduplicate_albums.py  list_albums.py
immich_autotag/api/: __init__.py
immich_autotag/architecture_import/: __init__.py  caller_info.py  fullname_info.py  immich_module_path.py  import_checker.py  module_path.py  rule_evaluator.py  rules.py  shared_symbols.py
immich_autotag/assets/: asset_cache_entry.py  asset_dto_state.py  asset_manager.py  asset_response_wrapper.py  asset_response_wrapper_list.py  asset_uuid.py  asset_validation.py  checkpoint_utils.py  classification_update_result.py  classification_validation_result.py  deduplicate_assets.py  get_all_assets.py  print_asset_details.py  process_assets.py  process_single_asset.py  validators.py
immich_autotag/classification/: classification_rule_set.py  classification_rule_wrapper.py  classification_status.py  match_classification_result.py  match_result.py  (+2 more)
jenkins_logs/: README.md
prompts/: translate_es_to_en.md
scripts/: build_docker_image.sh  clean_pycache.sh  format_and_sort.sh  loop_run_app.sh  package_and_upload.sh  run_docker_with_config.sh  test_install_from_testpypi.sh
tests/: test_dto_compat.py
(+603 files in other folders)
